--- a/index.html
+++ b/index.html
@@ -102,30 +102,36 @@
         <section class="terceraSeccion">
             <h2>What they've said</h2>
 
-            <article>
-                <img src="/img/avatar-anisha.png" alt="">
-                <h3>Anisha Li</h3>
-                <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
-            </article>
-            <article>
-                <img src="/img/avatar-ali.png" alt="">
-                <h3>Ali Bravo</h3>
-                <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
-            </article>
-            <article>
-                <img src="/img/avatar-richard.png" alt="">
-                <h3>Richard Watts</h3>
-                <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
-            </article>
-
-            <button class="getStartedTestimonio">Get Started</button>
+            <!-- Cards -->
+            <div>
+                <article class="cards">
+                    <img src="/img/avatar-anisha.png" alt="">
+                    <h3>Anisha Li</h3>
+                    <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                </article>
+                <article class="cards">
+                    <img src="/img/avatar-ali.png" alt="">
+                    <h3>Ali Bravo</h3>
+                    <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
+                </article>
+                <article class="cards">
+                    <img src="/img/avatar-richard.png" alt="">
+                    <h3>Richard Watts</h3>
+                    <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
+                </article>
+            </div>
+            
+            <!-- Boton get started cards -->
+            <div class="buttonCards">
+                <button class="getStartedTestimonio">Get Started</button>
+            </div>
         </section>
 
         <!-- Seccion naranja -->
-        <section>
+        <section class="seccionNaranja">
             <h2>Simplify hoy your team
                 words today.</h2>
-            <button>Get Started</button>
+            <button class="botonBlanco">Get Started</button>
         </section>
 
     </main>
