--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/62fa54b810.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <!-- Header -->
-    <header>
-
+    <header class="navbar">
         <img src="/img/logo.svg" alt="logo">
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
+        <!-- navigation bar -->
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
             <ul>
                 <li><a href="#">Princing</a></li>
                 <li><a href="#">Product</a></li>
@@ -28,10 +32,8 @@
         <label for="nav-toggle" class="nav-toggle-label">
             <span></span>
         </label>
-
         <button  class="botonNaranja">Get started</button>
-
-    </header class="navbar">
+    </header>
 
     <main>
 
@@ -45,7 +47,7 @@
                 <p>Manage makes it simple for software teams
                     to plan day-to-day tasks while keeping the
                     large team goals in view </p>
-                <button>Get Started</button>
+                <button class="botonNaranja">Get Started</button>
             </article>
                 <img src="/img/illustration-intro.svg" alt="imagen graficas">
         </section>
@@ -60,14 +62,12 @@
                 <p>Manage provides all the functionality your
                     teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
             </article>
-
             <!-- Articulo numerado -->
-            <article class="lista">
-                
+                <article class="lista">
                 <!-- Numerador 1 -->
                 <div>
                     <div class="numeradores">
-                        <button class="botonContador">01</button>
+                        <div class="botonContador">01</div>
                         <h3>Track company-wide progress</h3> 
                     </div>
                     <div>
@@ -78,7 +78,7 @@
                 <!-- Numerador 2 -->
                 <div>
                     <div class="numeradores">
-                        <button class="botonContador">02</button>
+                        <div class="botonContador">02</div>
                         <h3>Advance built in reports</h3>
                     </div>
                         <p class="parrafonumerador">Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
@@ -88,20 +88,18 @@
                 <!-- Numerador 3 -->
                 <div>
                     <div class="numeradores">
-                        <button class="botonContador">03</button>
+                        <div class="botonContador">03</div>
                         <h3>Everything you need in one place</h3>
                     </div>
                         <p class="parrafonumerador">Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.</p>
                     </div>
                 </div>
-
             </article>
         </section>
 
         <!-- Tercera seccion -->
         <section class="terceraSeccion">
             <h2>What they've said</h2>
-
             <!-- Cards -->
             <div>
                 <article class="cards">
@@ -120,10 +118,9 @@
                     <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
                 </article>
             </div>
-            
             <!-- Boton get started cards -->
             <div class="buttonCards">
-                <button class="getStartedTestimonio">Get Started</button>
+                <button class="botonNaranja">Get Started</button>
             </div>
         </section>
 
@@ -138,17 +135,22 @@
 
     <!-- Footer negro -->
     <footer>
-        <div class="logoFooter">
-            <img src="/img/logoFooter.svg" alt="logo">
+        <!-- Logo y redes -->
+        <div class="logoyRedes">
+            <div class="logoFooter">
+                <img src="/img/logoFooter.svg" alt="logo">
+            </div>
+            <div class="redesSociales">
+                <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest-square"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+            </div>
         </div>
-        <div class="redesSociales">
-            <a href="#"><img src="/img/icon-facebook.svg" alt="facebook"></a>
-            <a href="#"><img src="/img/icon-youtube.svg" alt="youtube"></a>
-            <a href="#"><img src="/img/icon-twitter.svg" alt="twitter"></a>
-            <a href="#"><img src="/img/icon-pinterest.svg" alt="pinterest"></a>
-            <a href="#"><img src="/img/icon-instagram.svg" alt="instagram"></a>
-        </div>
-            <ul>
+        <!-- Nav bar del footer -->
+        <div>
+            <ul class="navBarFooter">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Products</a></li>
@@ -157,10 +159,12 @@
                 <li><a href="#">Community</a></li>
                 <li><a href="#">Privacy Policy</a></li>
             </ul>
-        <div>
+        </div>
+        <!-- Formulario -->
+        <div class="formulario">
             <form action="#" id="email" method="post">
                 <input type="email" name="email" placeholder="Update in your inbox...">
-                <input type="submit" value="Go"></input>
+                <input class="botonContador" type="submit" value="Go"></input>
             </form>
             <p>Copyright 2020. All Rights Reserved</p>
         </div>
