--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img src="/img/logo.svg" alt="logo">
         <!-- navigation bar -->
         <nav>
-            <input type="checkbox" id="check">
+            <!-- <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars"></i>
-            </label>
+            </label> -->
             <ul>
                 <li><a href="#">Princing</a></li>
                 <li><a href="#">Product</a></li>
