primero agregado media query

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
         <img src="/img/logo.svg" alt="logo">
         <!-- navigation bar -->
         <nav>
-            <!-- <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-                <i class="fas fa-bars"></i>
-            </label> -->
             <ul>
                 <li><a href="#">Princing</a></li>
                 <li><a href="#">Product</a></li>
@@ -33,6 +29,7 @@
             <span></span>
         </label>
         <button  class="botonNaranja">Get started</button>
+        <i class="fa-solid fa-bars"></i>
     </header>
 
     <main>
@@ -49,7 +46,10 @@
                     large team goals in view </p>
                 <button class="botonNaranja">Get Started</button>
             </article>
+
+            <article class="graficas">
                 <img src="/img/illustration-intro.svg" alt="imagen graficas">
+            </article>
         </section>
 
         <!-- Segunda seccion -->
