--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     teas needs, without the complexity. Our software is tailor-made for modern digital product teams</p>
             </article>
             <!-- Articulo numerado -->
-                <article class="lista">
+            <article class="lista">
                 <!-- Numerador 1 -->
                 <div>
                     <div class="numeradores">
@@ -160,15 +160,18 @@
                 <li><a href="#">Privacy Policy</a></li>
             </ul>
         </div>
-        <!-- Formulario -->
-        <div class="formulario">
-            <form action="#" id="email" method="post">
-                <input type="email" name="email" placeholder="Update in your inbox...">
-                <input class="botonContador" type="submit" value="Go"></input>
-            </form>
+        <!-- Formulario y Copyright -->
+        <div class="formYcopy">
+            <div class="formulario">
+                <form action="#" id="email" method="post">
+                    <input type="email" name="email" placeholder="Update in your inbox...">
+                    <input class="botonContador" type="submit" value="Go"></input>
+                </form>
+            </div>
+        </div>
+        <div class="copyright">
             <p>Copyright 2020. All Rights Reserved</p>
         </div>
-
     </footer>
 
 </body>
