--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <!-- Seccion naranja -->
         <section class="seccionNaranja">
-            <h2>Simplify hoy your team
+            <h2>Simplify how your team
                 words today.</h2>
             <button class="botonBlanco">Get Started</button>
         </section>
