mobile responosve terminado

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     better products.</h1>
                 <p>Manage makes it simple for software teams
                     to plan day-to-day tasks while keeping the
-                    large team goals in view </p>
+                    large team goals in view.</p>
                 <button class="botonNaranja">Get Started</button>
             </article>
 
@@ -163,10 +163,10 @@
         <!-- Formulario y Copyright -->
         <div class="formYcopy">
             <div class="formulario">
-                <form action="#" id="email" method="post">
-                    <input type="email" name="email" placeholder="Update in your inbox...">
-                    <input class="botonContador" type="submit" value="Go"></input>
-                </form>
+                <form action="#" method="post">
+                    <input type="email" name="mail" placeholder="Updates in your inbox..." required>
+                    <button type="submit">GO</button>
+]                </form>
             </div>
         </div>
         <div class="copyright">
